# db2-api-project-NICOLAS-ALVAREZ

./: .pdm-python  README.md  env.example  pyproject.toml
app/: __init__.py  controlers.py  database.py  dtos.py  models.py  repositories.py
migrations/: env.py
migrations/versions/: 2c68bdc132be_add_authors_date_of_birth.py  6dd707801380_init_db.py  9b2a6fc8178c_create_client_table.py  b33c574c2170_added_book_copy_and_loan_models.py
